Changes have been made only in design

--- a/Classical statistical tests/Classical-Statistical-Tests.-HW1.html
+++ b/Classical statistical tests/Classical-Statistical-Tests.-HW1.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2023-11-26" />
 
-<title>Task 5 for Maria Bochkareva</title>
+<title>Task 5</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Task 5 for Maria Bochkareva</h1>
+<h1 class="title toc-ignore">Task 5</h1>
 <h4 class="author">Oleg Arnaut</h4>
 <h4 class="date">2023-11-26</h4>
 
@@ -363,14 +363,19 @@ display: none;
 протестируйте их, используя соответствующие статистические критерии.
 Решение должно содержать все элементы алгоритма проверки статистических
 гипотез:</p>
-<p>• Сформулируете нулевую и альтернативную гипотезы. • Укажите уровень
-значимости α. • Определите статистический тест (критерий) для проверки
-гипотезы. При необходимости аргументируйте выбор одностороннего теста. •
-Укажите критическое значение статистики (используйте распределения из
-материалов лекции). • Определите наблюдаемое значение статистики. •
-Оцените статистическую значимость (p-value и/или доверительный
-интервал). • Оцените практическую значимость.</p>
-<p>*Данные для анализа необходимо генерировать самостоятельно в
+<ul>
+<li>Сформулируете нулевую и альтернативную гипотезы.</li>
+<li>Укажите уровень значимости α.</li>
+<li>Определите статистический тест (критерий) для проверки гипотезы. При
+необходимости аргументируйте выбор одностороннего теста.</li>
+<li>Укажите критическое значение статистики (используйте распределения
+из материалов лекции).</li>
+<li>Определите наблюдаемое значение статистики.</li>
+<li>Оцените статистическую значимость (p-value и/или доверительный
+интервал).</li>
+<li>Оцените практическую значимость.</li>
+</ul>
+<p>Данные для анализа необходимо генерировать самостоятельно в
 соответствии с каждой представленной гипотезой. По возможности
 используйте пакет dplyr</p>
 </div>
@@ -417,8 +422,8 @@ data_task1 &lt;- data.frame(activity, cardio)</code></pre>
 старше 50 лет.</p>
 <pre class="r"><code>α = 0.05</code></pre>
 <p><em>Cтатистический тест (критерий) для проверки гипотезы:</em></p>
-<p>Применим двусторонний тест хи-квадрат, т.к: - обе переменные
-категориальные; - цель исследования - определить, существует ли
+<p>Применим двусторонний тест хи-квадрат, т.к: * обе переменные
+категориальные; * цель исследования - определить, существует ли
 статистически значимая ассоциация между двумя переменными.</p>
 <p><em>Укажите критическое значение статистики (используйте
 распределения из материалов лекции)</em></p>
@@ -747,8 +752,8 @@ task4 &lt;- data.frame(treatment, activity)</code></pre>
 <p><em>Определите статистический тест (критерий) для проверки гипотезы.
 При необходимости аргументируйте выбор одностороннего теста.</em></p>
 <p>Односторонний Z-тест для сравнения долей в двух независимых выборках,
-т.к.: - Переменная исхода является бинарной. - Сравнение двух
-независимых групп. - Альтернативная гипотеза предполагает увеличение, а
+т.к.: * Переменная исхода является бинарной. * Сравнение двух
+независимых групп. * Альтернативная гипотеза предполагает увеличение, а
 не изменение доли вернувшихся к нормальной физической активности.</p>
 <p><em>Укажите критическое значение статистики.</em></p>
 <pre class="r"><code># Уровень значимости
@@ -849,7 +854,7 @@ task5 &lt;- data.frame(before, after)</code></pre>
 <p>α = 0.05</p>
 <p><em>Определите статистический тест (критерий) для проверки гипотезы.
 При необходимости аргументируйте выбор одностороннего теста.</em></p>
-<p>Двусторонний критерий Макнемара, т.к.: - Бинарные данные - Связанные
+<p>Двусторонний критерий Макнемара, т.к.: * Бинарные данные * Связанные
 выборки</p>
 <p>Критерий Макнемара позволяет анализировать есть ли статистически
 значимое различие в долях наблюдений между двумя связанными выборками.
@@ -1062,7 +1067,9 @@ task7 &lt;- rmvnorm(n = sample_size,
 ## This warning is displayed once every 8 hours.
 ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
 ## generated.</code></pre>
-<p>##Решение</p>
+</div>
+<div id="решение-6" class="section level2">
+<h2>Решение</h2>
 <p><em>Сформулируете нулевую и альтернативную гипотезы.</em></p>
 <p>H0: Длительность сна не ассоциирована с уровнем стресса у студентов.
 Средний уровень стресса не зависит от длительности сна.</p>
@@ -1072,11 +1079,11 @@ task7 &lt;- rmvnorm(n = sample_size,
 <p>α = 0.05</p>
 <p><em>Определите статистический тест (критерий) для проверки гипотезы.
 При необходимости аргументируйте выбор одностороннего теста.</em></p>
-<p>Двусторонний корреляционный тест Пирсона, т.к.: - Тип данных -
-количественные переменные. - Линейная связь - корреляционный тест
+<p>Двусторонний корреляционный тест Пирсона, т.к.: * Тип данных -
+количественные переменные. * Линейная связь - корреляционный тест
 Пирсона ищет линейные связи между переменными. Если между “длительностью
 сна” и “уровнем стресса” существует линейная зависимость, то этот тест
-должен быть чувствителен к ней. - Ассоциация без направления: В данной
+должен быть чувствителен к ней. * Ассоциация без направления: В данной
 задаче, мы не имеем заранее предположений о том, будет ли ассоциация
 между “длительностью сна” и “уровнем стресса” положительной или
 отрицательной.</p>
